# hailo-apps-infra

./: .gitignore  CPU_INFERENCE_README.md  README.md  download_resources.sh  install.py  install.sh  pyproject.toml  requirements.txt  run_tests.sh  set_env.sh  setup.py  setup_env.sh
config/: config.yaml  resources_config.yaml
cpp/: meson.build
doc/: README.md  app_development.md  developer_guide.md  face_recognition_readme.md  hailo_gstreamer_architecture.md  installation_guide.md  pipeline_examples.md  usage_of_all_pipelines.md  wrte_postprocess.md  x86_hailo_packages_installation.md
doc/developer_guide/: README.md  app_development.md  retraining_example.md  writing_postprocess.md
doc/user_guide/: README.md  configuration.md  installation.md  repository_structure.md  running_applications.md
hailo_apps/hailo_app_python/apps/depth/: README.md
hailo_apps/hailo_app_python/apps/detection/: README.md
hailo_apps/hailo_app_python/apps/detection_simple/: README.md  detection_pipeline_simple.py  detection_simple.py
hailo_apps/hailo_app_python/apps/face_recognition/: README.md  face_recognition_pipeline.py  face_ui_callbacks.py  face_ui_elements.py
hailo_apps/hailo_app_python/apps/instance_segmentation/: README.md  instance_segmentation_pipeline.py
hailo_apps/hailo_app_python/apps/pose_estimation/: README.md
hailo_apps/hailo_app_python/core/common/: core.py  defines.py
hailo_apps/hailo_app_python/core/cpu_inference/: __init__.py  cpu_detector.py
hailo_apps/hailo_app_python/core/gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
hailo_apps/hailo_app_python/core/installation/: download_resources.py  post_install.py  set_env.py
hailo_apps_infra/: depth_pipeline.py  detection_pipeline.py  detection_pipeline_simple.py  gstreamer_app.py  gstreamer_helper_pipelines.py  hailo_rpi_common.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
hailo_apps_infra/common/: pyproject.toml
hailo_apps_infra/common/hailo_common/: buffer_utils.py  config_utils.py  core.py  defines.py  installation_utils.py
hailo_apps_infra/config/: pyproject.toml
hailo_apps_infra/config/hailo_config/: config.yaml  resources_config.yaml
hailo_apps_infra/gstreamer/: pyproject.toml
hailo_apps_infra/gstreamer/hailo_gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
hailo_apps_infra/hailo_apps/: pyproject.toml
hailo_apps_infra/hailo_apps/apps/face_recognition/: face_recognition.py  face_recognition_pipeline.py  face_ui_elements.py
hailo_apps_infra/hailo_apps/hailo_gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
hailo_apps_infra/hailo_apps/hailo_pipelines/: depth_pipeline.py  detection_pipeline.py  detection_pipeline_simple.py  face_recognition_pipeline.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
hailo_apps_infra/hailo_core/: pyproject.toml
hailo_apps_infra/hailo_core/hailo_common/: base_ui_elements.py  buffer_utils.py  config_utils.py  core.py  db_handler.py  db_visualizer.py  defines.py  embedding_visualizer.py  installation_utils.py  telegram_handler.py  test_utils.py
hailo_apps_infra/hailo_core/hailo_installation/: compile_cpp.py  create_dirs.py  create_hailo_venv.py  download_resources.py  post_install.py  python_installation.py  set_env.py
hailo_apps_infra/hailo_cpp_postprocess/cpp/: meson.build
hailo_apps_infra/installation/: pyproject.toml
hailo_apps_infra/installation/hailo_installation/: compile_cpp.py  create_dirs.py  download_resources.py  post_install.py  pre_install.py  python_installation.py  set_env.py
hailo_apps_infra/pipelines/: pyproject.toml
hailo_apps_infra/pipelines/hailo_pipelines/: depth_pipeline.py  detection_pipeline.py  detection_pipeline_simple.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
local_resources/: barcode_labels.json  face_recon_algo_params.json
scripts/: check_installed_packages.sh  compile_postprocess.sh  hailo_installer.sh  hailo_python_installation.sh  kill_first_hailo.sh
tests/: test_all_pipelines.py  test_face_recon.py  test_retraining.py  test_sanity_check.py
