[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hailo-apps-infra"
version = "0.4.0"
description = "Infra package to install all modular Hailo apps"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Hailo"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2.0.0",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "gradio",
    "fastrtc",
    "lancedb",
    "matplotlib",
    "Pillow"
]

[project.scripts]
hailo-post-install = "hailo_apps_infra.hailo_core.hailo_installation.post_install:main"
hailo-set-env = "hailo_apps_infra.hailo_core.hailo_installation.set_env:main"
hailo-download-resources = "hailo_apps_infra.hailo_core.hailo_installation.download_resources:main"
hailo-detect = "hailo_apps_infra.hailo_apps.hailo_pipelines.detection_pipeline:main"
hailo-depth = "hailo_apps_infra.hailo_apps.hailo_pipelines.depth_pipeline:main"
hailo-pose = "hailo_apps_infra.hailo_apps.hailo_pipelines.pose_estimation_pipeline:main"
hailo-seg = "hailo_apps_infra.hailo_apps.hailo_pipelines.instance_segmentation_pipeline:main"
hailo-simple-detect = "hailo_apps_infra.hailo_apps.hailo_pipelines.detection_pipeline_simple:main"
hailo-face-recon = "hailo_apps_infra.hailo_apps.apps.face_recognition.face_recognition:main"

[tool.setuptools.packages.find]
include = ["hailo_apps_infra*"]

[tool.setuptools.package-data]
"hailo_apps_infra.hailo_cpp_postprocess" = [
  "meson.build",
  "compile_postprocess.sh",
  "cpp/**/*",
]
"hailo_apps_infra.hailo_core" = [
    "hailo_config/*.yaml",
    "hailo_config/*.yml"
]