[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hailo-apps"
version = "25.7.0"
description = "Hailo AI applications and pipelines package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Hailo"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2.0.0",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "gradio",
    "fastrtc",
    "lancedb",
    "matplotlib",
    "Pillow"
]

[project.scripts]
hailo-post-install =        "hailo_apps.hailo_app_python.core.installation.post_install:main"
hailo-compile-postprocess = "hailo_apps.hailo_app_python.core.installation.compile_cpp:main"
hailo-set-env =             "hailo_apps.hailo_app_python.core.installation.set_env:main"
hailo-download-resources =  "hailo_apps.hailo_app_python.core.installation.download_resources:main"
hailo-detect =              "hailo_apps.hailo_app_python.apps.detection.detection_pipeline:main"
hailo-depth =               "hailo_apps.hailo_app_python.apps.depth.depth_pipeline:main"
hailo-pose =                "hailo_apps.hailo_app_python.apps.pose_estimation.pose_estimation_pipeline:main"
hailo-seg =                 "hailo_apps.hailo_app_python.apps.instance_segmentation.instance_segmentation_pipeline:main"
hailo-detect-simple =       "hailo_apps.hailo_app_python.apps.detection_simple.detection_pipeline_simple:main"
hailo-face-recon =          "hailo_apps.hailo_app_python.apps.face_recognition.face_recognition:main"

[tool.setuptools.packages.find]
include = ["hailo_apps*"]

[tool.setuptools.package-data]
"hailo_apps.hailo_app_python.core.cpp_postprocess" = [
    "meson.build",
    "compile_postprocess.sh",
    "cpp/**/*",
]
"hailo_apps" = [
    "config/*.yaml",
]