[project]
name = "hailo-apps"
version = "0.4.0"
description = "GStreamer and pipeline support for Hailo"
authors = [{ name = "Hailo" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "hailo_core @ file://../hailo_core"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "hailo_pipelines",
    "hailo_gstreamer",
    "apps",
    "apps.face_recognition",
]

[project.scripts]
hailo-detect =          "hailo_pipelines.detection_pipeline:main"
hailo-depth =           "hailo_pipelines.depth_pipeline:main"
hailo-pose =            "hailo_pipelines.pose_estimation_pipeline:main"
hailo-seg =             "hailo_pipelines.instance_segmentation_pipeline:main"
hailo-simple-detect =   "hailo_pipelines.detection_pipeline_simple:main"
hailo-face-recon =      "apps.face_recognition.face_recognition:main"
