[project]
name = "hailo-installation"
version = "0.1.0"
description = "Installation and setup logic"
authors = [{ name = "Hailo" }]
dependencies = []

[project.scripts]
# this line makes `set-env` run hailo_installation.env_setup:main()
set-env = "hailo_installation.env_setup:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
