[project]
name = "hailo-pipeline"
version = "0.1.0"
description = "Pipeline logic"
authors = [{ name = "Hailo" }]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
hailo-detect = "hailo_pipelines.detection_pipeline:main"
hailo-depth = "hailo_pipelines.depth_pipeline:main"
hailo-pose = "hailo_pipelines.pose_estimation_pipeline:main"
hailo-seg = "hailo_pipelines.instance_segmentation_pipeline:main"
hailo-simple-detect = "hailo_pipelines.detection_pipeline_simple:main"
